# pyfarm-energy

./: pyproject.toml
src/pyfarm/energy/: __init__.py  behavior.py  calculator.py  models.py
tests/: test_energy.py
