[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyfarm-energy"
version = "0.1.0"
description = "Power usage and cost tracking for pyfarm."
requires-python = ">=3.10"
dependencies = [
    "pyfarm-core>=0.1.0",
    "pyfarm-control>=0.1.0",
    "pyfarm-analytics>=0.1.0",
    "pyfarm-storage>=0.1.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.23"]

[tool.hatch.build.targets.wheel]
packages = ["src/pyfarm"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
